--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -55,23 +55,36 @@
 
 .subNavbar {
     background-color: #d96140;
+    border: 2px solid #d96140;
     color: white;
     display: flex;
 }
 
 .subNavbar .subNavbarItems {
     position: relative;
+    cursor: pointer;
+    margin-right: 3px;
+    margin-left: 3px;
+}
+
+.subNavbar .subNavbarItems:first-child {
+    margin-left: 0;
+}
+
+.subNavbar .subNavbarItems:hover {
+    background-color: white;
+    color: #d96140;
 }
 
 .subNavbar .subNavbarItems::after {
     content: "";
     width: 1px;
-    height: 100%;
+    height: 60%;
     border: 0 solid white;
     border-right-width: 2px;
     position: absolute;
-    right: -10px;
-    top: 0px
+    right: -4px;
+    top: 20%;
 }
 
 .subNavbar .subNavbarItems p {
