--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -58,6 +58,7 @@
     border: 2px solid #d96140;
     color: white;
     display: flex;
+    justify-content: center;
 }
 
 .subNavbar .subNavbarItems {
@@ -67,8 +68,15 @@
     margin-left: 3px;
 }
 
-.subNavbar .subNavbarItems:first-child {
-    margin-left: 0;
+.subNavbar .subNavbarItems:first-child::before {
+    content: "";
+    width: 1px;
+    height: 60%;
+    border: 0 solid white;
+    border-right-width: 2px;
+    position: absolute;
+    left: -4px;
+    top: 20%;
 }
 
 .subNavbar .subNavbarItems:hover {
