--- a/src/pages/Home/Carousel.css
+++ b/src/pages/Home/Carousel.css
@@ -1,6 +1,7 @@
 .carousel .carouselMainImage img {
     width: 100%;
     height: 300px;
+    object-fit: cover;
 }
 
 .carousel .carouselSubImages {
@@ -10,6 +11,11 @@
 
 .carousel .carouselSubImages .subImages {
     width: 20%;
+    cursor: pointer;
+}
+
+.carousel .carouselSubImages .subImages:hover {
+    border-color: #d96140 !important;
 }
 
 .carousel .carouselSubImages .subImages img {
