--- a/src/pages/Home/LastAddedProducts.css
+++ b/src/pages/Home/LastAddedProducts.css
@@ -4,8 +4,13 @@
 
 .lastAddedProducts .lastAddedProductsItems .lastAddedProductsItem {
     background-color: white;
-    box-shadow: rgba(0, 0, 0, 0.075) 0px 1px 2px 0px;
+    box-shadow: rgba(0, 0, 0, 0.075) 0px 0px 2px 0px;
+    cursor: pointer;
     /* display: flex; */
+}
+
+.lastAddedProducts .lastAddedProductsItems .lastAddedProductsItem:hover {
+    box-shadow: rgba(0, 0, 0, 0.548) 0px 0px 2px 0px;
 }
 
 .lastAddedProducts .lastAddedProductsItems .lastAddedProductsItem .productImage {
