--- a/src/components/SubNavbar.css
+++ b/src/components/SubNavbar.css
@@ -1,9 +1,12 @@
 .subNavbar {
     background-color: #d96140;
     border: 2px solid #d96140;
+    border-bottom-width: 0;
     color: white;
     display: flex;
     justify-content: center;
+    position: relative;
+    /* margin: 2px; */
 }
 
 .subNavbar .subNavbarItems {
@@ -42,4 +45,17 @@
 
 .subNavbar .subNavbarItems p {
     font-weight: 500;
+}
+
+.subNavbar .subNavbarDropDown {
+    border: 1px solid #d96140;
+    border-top-width: 0;
+    position: absolute;
+    background-color: #fff;
+    width: calc(100% + 4px);
+    top: 40px;
+    left: -2px;
+    z-index: 99;
+    color: black;
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
 }
