--- a/src/components/SubNavbar.css
+++ b/src/components/SubNavbar.css
@@ -59,3 +59,11 @@
     color: black;
     box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
 }
+
+.subNavbar .subNavbarDropDown .subNavbarDropDownItems {
+    cursor: pointer;
+}
+
+.subNavbar .subNavbarDropDown .subNavbarDropDownItems:hover {
+    color: #d96140;
+}
