--- a/src/pages/Login/style.css
+++ b/src/pages/Login/style.css
@@ -30,7 +30,13 @@
     width: 100%;
 }
 
-.Login input {
+.Login .eMail input {
+    width: 100%;
+    outline: none;
+    border: 1px solid #d96140;
+}
+
+.Login .password input {
     width: 100%;
     outline: none;
     border: 1px solid #d96140;
@@ -44,4 +50,21 @@
     color: white;
     font-weight: 500;
     font-size: 18px;
+}
+
+.extraInfo {
+    font-size: 14px;
+}
+
+.forgetMyPassword {
+    cursor: pointer;
+}
+
+.forgetMyPassword:hover {
+    text-decoration: underline;
+}
+
+.extraInfo label {
+    padding-left: 5px;
+    font-size: 14px;
 }
