--- a/src/pages/Login/style.css
+++ b/src/pages/Login/style.css
@@ -42,6 +42,12 @@
     border: 1px solid #d96140;
 }
 
+.Login .name input {
+    width: 100%;
+    outline: none;
+    border: 1px solid #d96140;
+}
+
 .Login .submit {
     width: 100%;
     border: none;
