--- a/src/pages/ListItems/style.css
+++ b/src/pages/ListItems/style.css
@@ -1,6 +1,37 @@
-.filterMenu div {
+.filterMenu .filters {
     font-size: 14px;
     background-color: #f8f4e0;
+}
+
+.filterMenu .filters .filterContent {
+    max-height: 150px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    background-color: white;
+}
+
+.filterMenu .filters .filterContent input[type='checkbox'] {
+    position: relative;
+    width: 16px;
+    height: 16px;
+    border-radius: 3px;
+}
+
+.filterMenu .filters .filterContent input[type='checkbox']:before {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 16px;
+    height: 16px;
+    top: 0;
+    left: 0;
+    border: 2px solid #555555;
+    border-radius: 3px;
+    background-color: rgba(255, 255, 255, 0);
+}
+
+.filterMenu .filters .filterContent label {
+    font-weight: 500;
 }
 
 .filterMenu .filterSearch {
@@ -18,4 +49,39 @@
     position: absolute;
     top: 6px;
     right: 6px;
+}
+
+.slidecontainer {
+    width: 100%;
+}
+
+.slidecontainer .slider {
+    /* -webkit-appearance: none; */
+    width: 100%;
+    height: 25px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+}
+
+.slidecontainer .slider:hover {
+    opacity: 1;
+}
+
+.slidecontainer .slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    background: #04AA6D;
+    cursor: pointer;
+}
+
+.slidecontainer .slider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    background: #04AA6D;
+    cursor: pointer;
 }
