--- a/src/pages/ListItems/style.css
+++ b/src/pages/ListItems/style.css
@@ -86,11 +86,11 @@
     cursor: pointer;
 }
 
-.wrapper {
-    background: #fff;
-    border-radius: 10px;
-    box-shadow: 0 12px 35px rgba(0, 0, 0, 0.1);
+::selection {
+    color: #fff;
+    background: #17A2B8;
 }
+
 
 .price-input {
     width: 100%;
@@ -100,7 +100,6 @@
 .price-input .field {
     display: flex;
     width: 100%;
-    height: 45px;
     align-items: center;
 }
 
@@ -109,11 +108,12 @@
     height: 100%;
     outline: none;
     font-size: 12px;
-    margin-left: 12px;
+    /* margin-left: 12px; */
     border-radius: 5px;
     text-align: center;
     border: 1px solid rgb(236, 236, 236);
-    -moz-appearance: textfield;
+    padding: 10px 5px;
+    /* -moz-appearance: textfield; */
 }
 
 input[type="number"]::-webkit-outer-spin-button,
@@ -122,14 +122,16 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 .price-input .separator {
-    width: 130px;
+    /* width: 130px; */
+    margin: 0 10px;
+    font-weight: 700;
     display: flex;
     font-size: 19px;
     align-items: center;
     justify-content: center;
 }
 
-.slider {
+/* .slider {
     height: 5px;
     position: relative;
     background: #ddd;
@@ -143,40 +145,4 @@ input[type="number"]::-webkit-inner-spin-button {
     position: absolute;
     border-radius: 5px;
     background: #17A2B8;
-}
-
-.range-input {
-    position: relative;
-}
-
-.range-input input {
-    position: absolute;
-    width: 100%;
-    height: 5px;
-    top: -5px;
-    background: none;
-    pointer-events: none;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-}
-
-input[type="range"]::-webkit-slider-thumb {
-    height: 17px;
-    width: 17px;
-    border-radius: 50%;
-    background: #17A2B8;
-    pointer-events: auto;
-    -webkit-appearance: none;
-    box-shadow: 0 0 6px rgba(0, 0, 0, 0.05);
-}
-
-input[type="range"]::-moz-range-thumb {
-    height: 17px;
-    width: 17px;
-    border: none;
-    border-radius: 50%;
-    background: #17A2B8;
-    pointer-events: auto;
-    -moz-appearance: none;
-    box-shadow: 0 0 6px rgba(0, 0, 0, 0.05);
-}
+} */
