--- a/src/pages/Admin/style.css
+++ b/src/pages/Admin/style.css
@@ -1,7 +1,7 @@
 .panelMenu {
     background-color: #d96140;
     height: 100vh;
-    box-shadow: rgba(0, 0, 0, 0.308) 1.95px 0 2.6px;
+    /* box-shadow: rgba(0, 0, 0, 0.308) 1.95px 0 2.6px; */
 }
 
 .panelMenu .logOut {
@@ -53,10 +53,18 @@
     align-items: center;
     color: white;
     background-color: #d96140;
-    box-shadow: rgba(0, 0, 0, 0.308) 0 2px 2.6px;
+    /* box-shadow: rgba(0, 0, 0, 0.308) 0 2px 2.6px; */
+    z-index: 99;
 }
 
 .panelNavbar .navbarPersonIcon {
     display: flex;
     align-items: center;
+}
+
+.generalCard .generalCards .content {
+    color: white;
+    border-radius: 5px;
+    background-color: #46B1C9;
+    min-height: 100%;
 }
