--- a/src/pages/Admin/style.css
+++ b/src/pages/Admin/style.css
@@ -4,21 +4,23 @@
     /* box-shadow: rgba(0, 0, 0, 0.308) 1.95px 0 2.6px; */
 }
 
-.panelMenu .logOut {
+.logOut {
+    position: fixed;
+    left: 0;
+    bottom: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    padding: 12px 0px !important;
-    width: 100%;
+    padding: 12px 12px !important;
     font-weight: 500;
-    background-color: white;
+    background-color: rgb(214, 214, 214);
     border-radius: 7px;
     transition: transform .2s ease;
 }
 
-.panelMenu .logOut:hover {
-    transform: translateY(-5px);
+.logOut:hover {
+    transform: translateX(5px);
 }
 
 .panelMenuItem .panelMenuItems {
@@ -88,4 +90,8 @@
 
 .addProduct button[type="submit"] {
     width: 200px;
+}
+
+.productSearch input {
+    width: 100%;
 }
