--- a/src/pages/Admin/style.css
+++ b/src/pages/Admin/style.css
@@ -74,7 +74,7 @@
 .addProduct {
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    /* justify-content: space-evenly; */
     background-color: white;
     border: 1px solid rgb(224, 224, 224);
     border-radius: 10px;
@@ -82,6 +82,7 @@
 
 .addProduct input {
     box-shadow: none !important;
+    margin-right: 5px;
 }
 
 .addProduct select {
@@ -89,7 +90,9 @@
 }
 
 .addProduct button[type="submit"] {
-    width: 200px;
+    /* text-overflow: ellipsis; */
+    min-width: fit-content;
+    max-width: 200px;
 }
 
 .productSearch input {
