--- a/src/pages/Admin/style.css
+++ b/src/pages/Admin/style.css
@@ -114,3 +114,12 @@
     background-color: #46b1c9ce;
     color: white;
 }
+
+.EditPopUp {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.027);
+}
