--- a/src/pages/Admin/style.css
+++ b/src/pages/Admin/style.css
@@ -116,10 +116,10 @@
 }
 
 .EditPopUp {
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100%;
     top: 0;
     left: 0;
-    background-color: rgba(0, 0, 0, 0.027);
+    background-color: rgba(0, 0, 0, 0.205);
 }
