--- a/src/pages/Admin/style.css
+++ b/src/pages/Admin/style.css
@@ -14,7 +14,7 @@
     cursor: pointer;
     padding: 12px 12px !important;
     font-weight: 500;
-    background-color: #46B1C9;
+    background-color: #d96140;
     color: white;
     /* border-radius: 7px; */
     border-top-right-radius: 7px;
