--- a/src/pages/Login/style.css
+++ b/src/pages/Login/style.css
@@ -74,3 +74,13 @@
     padding-left: 5px;
     font-size: 14px;
 }
+.alertPopUp {
+    position: absolute;
+    bottom: -99px;
+    color: white;
+    font-weight: 500;
+    transition: bottom 0.4s ease; 
+}
+.success {
+    background-color: green;
+}
