--- a/src/pages/Login/style.css
+++ b/src/pages/Login/style.css
@@ -77,6 +77,7 @@
 .alertPopUp {
     position: absolute;
     bottom: -99px;
+    left: 30px;
     color: white;
     font-weight: 500;
     transition: bottom 0.4s ease; 
