--- a/src/pages/Home/LastAddedProducts.css
+++ b/src/pages/Home/LastAddedProducts.css
@@ -28,6 +28,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    width: 100%;
 }
 
 .lastAddedProducts .lastAddedProductsItems .lastAddedProductsItem .productSpecs p {
